config/2_db.all.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: smart-home-db
  namespace: smart-home
  labels:
    k8s-app: smart-home-db
  annotations:
    deployment.kubernetes.io/revision: '1'
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: smart-home-db
  template:
    metadata:
      name: smart-home-db
      labels:
        k8s-app: smart-home-db
    spec:
      containers:
        - name: smart-home-db
          image: 'localhost:5000/smarthome-db:0.8'
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
          livenessProbe:
            exec:
              command: ["psql", "-U", "postgres", "-d", "pi", "-c", "SELECT 1"]
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              # Check we can execute queries over TCP (skip-networking is off).
              command: ["psql", "-U", "postgres", "-d", "pi", "-c", "SELECT 1"]
            initialDelaySeconds: 15
            timeoutSeconds: 2
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: smart-home-db
  namespace: smart-home
  labels:
    k8s-app: smart-home-db
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    k8s-app: smart-home-db
