config/frontend.all.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: smart-home-webui
  namespace: smart-home
  labels:
    k8s-app: smart-home-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: smart-home-webui
  template:
    metadata:
      name: smart-home-webui
      labels:
        k8s-app: smart-home-webui
    spec:
      containers:
        - name: smart-home-webui
          image: 'smarthome-webui:0.8'
          resources:
              limits:
                memory: 512Mi
                cpu: 1
          securityContext:
            privileged: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: smart-home-webui
  namespace: smart-home
  labels:
    k8s-app: smart-home-webui
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    k8s-app: smart-home-webui
  type: NodePort
  sessionAffinity: None
  externalTrafficPolicy: Cluster
