config/6_fct.ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: smarthome-less
  namespace: smart-home
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    #- host: smarthome.io
    - http:
        paths:
          - path: /api/v1/dust/
            backend:
              serviceName: dust-current
              servicePort: 8080
          - path: /api/v1/dust/range/
            backend:
              serviceName: dust-range
              servicePort: 8080
          - path: /api/v1/temperature/
            backend:
              serviceName: temperature-current
              servicePort: 8080
          - path: /api/v1/temperature/range/
            backend:
              serviceName: temperature-range
              servicePort: 8080
